--- a/src/scss/home/description.scss
+++ b/src/scss/home/description.scss
@@ -1,16 +1,18 @@
 .description {
 	&__container {
-		max-width: 856px;
+		max-width: 886px;
 		width: 100%;
 		text-align: center;
 		font-size: 27px;
 		padding-top: 120px;
-		padding-bottom: 95px;
+		padding-bottom: 115px;
 	}
+
 	&__marks {
 		width: 80px;
 		height: 64px;
 		fill: $primaryColor;
+		margin: 0 auto;
 		margin-bottom: 60px;
 	}
 
