--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -13,26 +13,40 @@
 
 /* Links */
 
-a, a:link, a:visited  {
-    text-decoration: none;
+a,
+a:link,
+a:visited {
+	text-decoration: none;
 }
 
-a:hover  {
-    text-decoration: none;
+a:hover {
+	text-decoration: none;
 }
 
 /* Common */
 
-aside, nav, footer, header, section, main {
+aside,
+nav,
+footer,
+header,
+section,
+main {
 	display: block;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-    font-size: inherit;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	font-size: inherit;
 	font-weight: inherit;
 }
 
-ul, ul li {
+ul,
+ul li {
 	list-style: none;
 }
 
@@ -40,18 +54,29 @@ img {
 	vertical-align: top;
 }
 
-img, svg {
-	max-width: 100%;
+img {
+	width: 100%;
 	height: auto;
 }
 
+svg {
+	height: 100%;
+	width: 100%;
+	max-width: inherit;
+	max-height: inherit;
+	display: block;
+}
+
 address {
-  font-style: normal;
+	font-style: normal;
 }
 
 /* Form */
 
-input, textarea, button, select {
+input,
+textarea,
+button,
+select {
 	font-family: inherit;
 	font-size: inherit;
 	color: inherit;
@@ -62,7 +87,8 @@ input::-ms-clear {
 	display: none;
 }
 
-button, input[type="submit"] {
+button,
+input[type="submit"] {
 	display: inline-block;
 	box-shadow: none;
 	background-color: transparent;
@@ -70,8 +96,10 @@ button, input[type="submit"] {
 	cursor: pointer;
 }
 
-input:focus, input:active,
-button:focus, button:active {
+input:focus,
+input:active,
+button:focus,
+button:active {
 	outline: none;
 }
 
