start team page

--- a/src/html/components/service.html
+++ b/src/html/components/service.html
@@ -1,5 +1,5 @@
 <div class="service">
-	<div class="service__back-img">
+	<div class="service__back-img back-border">
 		<img src="@@img" alt="Фото услуги" class="service__img">
 	</div>
 	<p class="service__text">@@text</p>
