finish team page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -52,3 +52,5 @@ body {
 @import "./footer";
 @import "./components/contact";
 @import "./components/menu";
+@import "./team";
+@import "./components/person";
