--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -9,6 +9,7 @@ $containerPaddingHeight: 40px;
 	background-color: $secondlyColor;
 	border-left: 1px solid rgba($primaryColor, 0.5);
 	height: 100%;
+	max-height: 1038px;
 	transform: translateX(100%);
 	transition: transform 0.25s cubic-bezier(0.4, 0, 1, 1);
 
